--- a/style.css
+++ b/style.css
@@ -1,32 +1,48 @@
-.color1 {color: #140f07;}
-.color2 {color: #202d4e;}
-.color3 {color: #585fa6;}
-.color4 {color: #9e9cf9;}
-.color5 {color: #ffe5f4;}
+.color1 {
+    color: #140f07;
+}
 
-body{
+.color2 {
+    color: #202d4e;
+}
+
+.color3 {
+    color: #585fa6;
+}
+
+.color4 {
+    color: #9e9cf9;
+}
+
+.color5 {
+    color: #ffe5f4;
+}
+
+body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #202d4e ;
+    background-color: #202d4e;
     color: white;
 }
 
-.contenedor{
+.contenedor {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
-.titulo{
+.titulo {
     font-size: 40px;
-    text-decoration:line-through;
+    text-decoration: line-through;
     text-decoration-color: #585fa6;
 }
 
-.rayas{
+.rayas {
     display: grid;
     max-width: 600px;
-    gap: 5px ;
-    background-color: #ffe5f4;/*color para el gap*/
+    gap: 5px;
+    background-color: #ffe5f4;
+    /*color para el gap*/
 
     grid-template-columns: 100px 100px 100px;
     grid-template-rows: 100px 100px 100px;
@@ -35,11 +51,63 @@ body{
     border-radius: 5px;
 }
 
-.rayas>div{
+.rayas>div {
     background-color: #9e9cf9;
+    display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
     border-radius: 10px;
     margin: 5px;
+    position: relative;
 }
+
+
+footer {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+
+/*--barras--*/
+
+.arriba {
+    width: 90px;
+    height: 10px;
+    background-color: #202d4e;
+    transform: rotate(45deg);
+    position: absolute;
+}
+
+.abajo {
+    width: 90px;
+    height: 10px;
+    background-color: #202d4e;
+    transform: rotate(-45deg);
+    position: absolute;
+
+}
+
+/*--/barras--*/
+
+/*--circulo--*/
+
+.circulo {
+    width: 80px;
+    height: 80px;
+
+    border-radius: 100%;
+    background: #202d4e;
+    position: absolute;
+}
+
+.circulo2 {
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    background: #9e9cf9;
+    position: absolute;
+}
+
+/*--/circulo--*/
