--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body {
     text-decoration-color: #585fa6;
 }
 
+
+
 .rayas {
     display: grid;
     max-width: 600px;
@@ -49,6 +51,8 @@ body {
 
     border: 5px solid #585fa6;
     border-radius: 5px;
+
+    margin-top: 10px;
 }
 
 .rayas>div {
@@ -62,11 +66,20 @@ body {
     position: relative;
 }
 
+button{
+    margin-top: 10px;
+    padding: 10px;
+    border: 0;
+    border-radius: 10px;
+    width: 100px;
+}
+
 
 footer {
     display: flex;
     justify-content: center;
     margin-top: 50px;
+    text-align: center;
 }
 
 
@@ -111,3 +124,4 @@ footer {
 }
 
 /*--/circulo--*/
+
